test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 22 Sep 2025 05:09:17 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="82lgkEs4w+kUeS418pwo2D5vpQSpjeLI", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}